observability/chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin
spec:
  ingressClassName: traefik
  rules:
    - host: zipkin
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  number: 9411
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
spec:
  ingressClassName: traefik
  rules:
    - host: prometheus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
spec:
  ingressClassName: traefik
  rules:
    - host: grafana
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-collector-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: otlphttp
spec:
  ingressClassName: traefik
  rules:
    - host: otel-collector
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-collector
                port:
                  number: 4318
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-collector-grpc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: otlpgrpc
spec:
  ingressClassName: traefik
  rules:
    - host: otel-collector
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-collector-grpc
                port:
                  number: 4317
